# eXactMPC

./: .gitignore  CMakeLists.txt  README.md  excavatorConstants.hpp  excavatorModel.cpp  excavatorModel.hpp  main.cpp  utils.cpp  utils.hpp
MATLAB/: simulation.m
MATLAB/MATLAB/: articulatedArmModel.m  excavatorConstants.m  excavatorModel.m
MATLAB/MATLAB/Utils/: rotMat.m  transMat.m
Python/: MPC.py  MPCSimulation.py  NLPSolver.py  excavatorConstants.py  excavatorModel.py  excavatorModel.urdf  visualisation.py
